# vnt-2

./: Cargo.toml  README.md
.github/workflows/: sync-vnt.yml
src/: args_config.rs  extract_wintun_dll.rs  log.rs  main_cli.rs  main_ctrl.rs  main_web.rs
vnt-core/: Cargo.toml  build.rs
vnt-ipc/: Cargo.toml  build.rs
vnt-ipc/proto/: local_ipc.proto
vnt-ipc/src/: client.rs  lib.rs  message.rs  server.rs
vnt-jni/: Cargo.toml
vnt-jni/java_example/: AndroidVpnExample.java
vnt-jni/java_example/com/vnt/: RegisterResult.java  VntApi.java  VntConfig.java  VntException.java  VntManager.java  VntNetwork.java
vnt-jni/src/: lib.rs
vnt-web/: Cargo.toml
vnt-web/src/: lib.rs  service_http.rs
vnt-web/static/: index.html
