[package]
name = "vnt-web"
version = "2.0.0"
edition = "2024"

[dependencies]
vnt-core = { path = "../vnt-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
log = "0.4.29"
ipnet = "2.11.0"
hostname = "0.4.2"
route_manager = "0.2.11"
toml = "0.9.8"
rust-embed = "8.0"
mime_guess = "2.0"
parking_lot = "0.12"
time = { version = "0.3.45", features = ["local-offset", "formatting", "macros"] }